Add list banner changes